--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -3,7 +3,7 @@ p, h1, h2, h3, h4, h5, h6, button {
 }
 
 body {
-    background-color: #f5f5f9;
+    background-color: #000000;  /* changed background */
     background-size: cover;
     width: auto; 
     overflow-x: hidden;
@@ -14,7 +14,7 @@ body {
 .nav-bar {
     width: 100%;
     display: inline-block;
-    background-color: #1C539F;
+    background-color: #000000;  /* changed background */
     font-family: "Roboto", serif;
     font-weight: 700 !important;
     padding-top: 10px;
@@ -50,7 +50,7 @@ body {
 }
 
 .profile {
-    background-color: #1d539f !important;
+    background-color: #000000 !important;  /* changed background */
     text-align: center;
     height: 320px;
     margin-bottom: 50px;
@@ -67,7 +67,7 @@ body {
         max-width: 100%;
         max-height: 100%;
         margin-left: auto;
-        margin-right: auto;
+        margin-right: 300px;  /* changed right margin */
         display: block;        
         padding: 20px;
 }
