--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -22,7 +22,7 @@
 <body>
     <header class="nav-bar">
         <div class="nav-content">
-            <a href="/">
+            <a href="/"> 
                 <div class="nav-logo">
                     <img src="./static/img/logo.svg" />
                 </div>
@@ -32,7 +32,7 @@
 
     <div class="profile">
         <div id="profile-picture" class="profile-picture">
-            <img src="./static/img/logo.jpg">
+            <img src="./static/img/noahprofile.jpg">
         </div>
         <h1>{{ title }}</h1>
     </div>
