Implementing/testing about feature #2 and education feature #5 version 1.0

--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -36,5 +36,44 @@
         </div>
         <h1>{{ title }}</h1>
     </div>
+
+    <section class="container">   <!-- START OF NEW FEATURES -->
+        <div class="about">  <!-- ABOUT MYSELF -->
+            <h2>About</h2>
+            <p>  <!-- Input data -->
+                Rising junior at Florida State University in pursuit of a 
+                Bachelor of Arts in Computer Science as well as a minor in innovation. 
+                App development is like trying to learn chess. So many different ideas/moves 
+                to pick from. I started as a beginner. After playing a few games each day, 
+                I've developed into a pretty decent player. Soon enough I'll be a master. 
+                I'm interested in tech entrepreneurship, fintech, mobile dev, machine learning
+                applications, and decentralized applications. "The people who are crazy enough 
+                to think that they can change the world are the ones who do." - Steve Jobs
+            </p>
+        </div>
+
+        <div class="edu">  <!-- EDUCATION -->
+            <h2>Education</h2>
+            <div class="arrange-horizontally"> 
+                <div class="edu-image">  
+                    <img src="./static/img/fsu-seal.jpeg">  <!-- Input data -->
+                </div>
+                <div>
+                    <p class="university-name">
+                        Florida State University  <!-- Input data -->
+                    </p>
+                    <p class="degree">
+                        BA, Computer Science  <!-- Input data -->
+                    </p>
+                    <p class="year">
+                        2020-2024  <!-- Input data -->
+                    </p>
+                </div>
+            </div>
+            <p class="activites">
+                Activities: Google Developer Student Club, Beta Theta Pi, FSU Boxing  <!-- Input data -->
+            </p>
+        </div>
+    </section>
 </body>
 </html>
