--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
+
 p, h1, h2, h3, h4, h5, h6, button {
-    font-family: "Roboto", serif;
+    font-family: 'Share Tech', sans-serif;
 }
 
 body {
@@ -7,7 +9,7 @@ body {
     background-size: cover;
     width: auto; 
     overflow-x: hidden;
-    font-family: "Roboto", serif;
+    font-family: 'Share Tech', sans-serif;
     margin: 0px;
 }
 
@@ -94,4 +96,78 @@ body {
     color: white;
     font-size: 50px;
     font-weight: 700;
+}
+
+/* NEW FEATURES */
+.container {
+    display: flex;  /* hortizontally stacks children */
+    justify-content: center;  /* centers boxes */
+    flex-wrap: wrap;  /* moves elements under each other if they don't fit */
+
+}
+
+.about, .edu {
+    background-color: white;
+    width: 400px;
+    margin: 100px;
+    border-radius: 15px;
+}
+
+.about h2 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.about p {
+    font-size: 20px;
+    margin-left: 30px;
+    margin-right: 30px
+}
+
+.edu h2 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.edu img {
+    border-radius: 50%;
+    max-width: 100px;
+    max-height: 100px;
+    margin-left: 30px;
+    margin-bottom: 0;
+}
+
+.arrange-horizontally > * {
+    display: inline-block;
+    text-align: center;
+}
+
+.university-name {
+    font-size: 20px;
+    margin-left: 30px;
+    font-weight: bold;
+}
+
+.degree, .year {
+    font-size: 16px;
+    margin-left: 30px;
+}
+
+.year {
+    font-size: 14px;
+    margin-left: 30px;
+    font-weight:lighter
+}
+
+.activites {
+    font-size: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.about:hover, .edu:hover {
+    background-color: rgb(62, 62, 62);
+    color: white;
+    transform: scale(1.03);
+    transition: all 1s ease;
 }
