Added socials buttons (Github and Linkedin) w/ styles

--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -50,6 +50,10 @@
                     <div class="button">
                         <p>Learn more!</p>
                     </div>
+                    <div class="socials">
+                        <a href="{{ linkedin }}" target="_blank" class="linkedin">Linkedin</a>
+                        <a href="{{ github }}" target="_blank" class="github">Github</a>
+                    </div>
                 </div>
             </div>
             <img src="../static/img/{{ member }}profile.jpg">
