Added what I forgot on my last pull request. 1. Changed website font. 2. Added img files for school seals.

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -14,8 +14,8 @@ h4,
 h5,
 h6,
 button {
-    /* Changed font used on whole page */
-    font-family: 'Montserrat', sans-serif;
+    /* Changed again - Noah */
+    font-family: 'Share Tech', sans-serif;
 }
 
 .home-text{
