--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -72,7 +72,7 @@
             <h2>Education</h2>
             <div class="arrange-horizontally"> 
                 <div class="edu-image">  
-                    <img src="../static/img/fsu-seal.jpeg">  <!-- Input data -->
+                    <img src="../static/img/{{ seal }}-seal.jpg">  <!-- Input data -->
                 </div>
                 <div>
                     <p class="university-name">
