--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -16,12 +16,13 @@
 
     <link lang='sass' rel="stylesheet" href="../static/styles/main.css">
     <link rel='icon' href='../static/img/favicon.ico' type='image/x-icon' />
-    <title>{{ title }}</title>
+    <title>{{ name }}</title>
 </head>
 
 <body>
     <header class="nav-bar">
         <div class="nav-content">
+            <img src="../static/img/baboon.png">
             <div class="nav-logo">
                 <a href="/">
                     <img src="../static/img/logo.svg" />
@@ -35,8 +36,9 @@
                 </div>
                 <div class="slide-menu">
                     <ul>
-                        <li><a href="/">Home</a></li>
+                        <li><a href="#profile">Intro</a></li>
                         <li><a href="#education">About & Education</a></li>
+                        <li><a href="#projects">Experience</a></li>
                         <li><a href="#projects">Projects</a></li>
                     </ul>
                 </div>
@@ -44,7 +46,7 @@
         </div>
     </header>
 
-    <div class="profile section">
+    <div class="profile section" id="profile">
         <div id="profile-picture" class="profile-picture">
             <div class="intro">
                 <h1><span style="--order: 1">Hi,</span></h1>
@@ -61,9 +63,6 @@
                 <h1><span style="--order: 5">MLH</span> <span style="--order: 6">Fellow</span></h1>
                 <br>
                 <div class="more">
-                    <div class="button">
-                        <p>Learn more!</p>
-                    </div>
                     <div class="socials">
                         <a href="{{ linkedin }}" target="_blank" class="linkedin">Linkedin</a>
                         <a href="{{ github }}" target="_blank" class="github">Github</a>
@@ -121,7 +120,6 @@
     const menu = document.querySelector('.menu');
 
     burgerButton.addEventListener('click', (e) => {
-        console.log(e.target);
         menu.classList.toggle('open');
     })
 
