--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -21,6 +21,7 @@ button {
 .home-text{
     color:#ffffff;
     text-align: center;
+    font-size: 50px;  /* Increased home page header font - noah */
 }
 
 .home-profile{
@@ -282,11 +283,11 @@ a.github {
 About/Edu Section Styling
 */
 
-.container {
+.about-edu-container {
     display: flex;  /* hortizontally stacks children */
     justify-content: center;  /* centers boxes */
     flex-wrap: wrap;  /* moves elements under each other if they don't fit */
-
+    margin-bottom: 70px;
 }
 
 .about, .edu {
@@ -350,10 +351,74 @@ About/Edu Section Styling
     margin-right: 30px;
 }
 
-.about:hover, .edu:hover {
-    /*background-color: black;*/
-    color: cyan;
-    /*color: white;*/
-    transform: scale(1.03);
+.about:hover, .edu:hover, .experiences:hover, .projects:hover{
+    transform: scale(1.05);
     transition: all 1s ease;
+}
+
+/* 
+//////////////////////////////////////////////////////////////////////////////
+Experiences Section Styling
+*/
+
+.experiences {
+    color: white;
+    background: none;
+    border: 2px solid white;
+    width: 1060px;
+    margin: auto;
+    border-radius: 10px;
+    margin-bottom: 150px;
+}
+
+.experiences h2 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.experiences p {
+    font-size: 20px;
+    margin-left: 30px;
+    margin-right: 30px
+}
+
+/* 
+//////////////////////////////////////////////////////////////////////////////
+Projects Section Styling
+*/
+
+.projects {
+    color: white;
+    background: none;
+    border: 2px solid white;
+    height: 600px;
+    width: 1060px;
+    margin: auto;
+    border-radius: 10px;
+    margin-bottom: 100px;
+}
+
+.projects h2 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.project-list {
+    display: flex;  /* hortizontally stacks children */
+    justify-content: center;  /* centers boxes */
+    flex-wrap: wrap;  /* moves elements under each other if they don't fit */
+    margin-bottom: 70px;
+}
+
+.first, .second {
+    color: white;
+    background: none;
+    border: 2px solid white;
+    width: 200px;
+    margin: 100px;
+    border-radius: 10px;
+}
+
+.first p, .second p {
+    text-align: center;
 }
