--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -1,3 +1,4 @@
+Html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,7 +23,12 @@
 <body>
     <header class="nav-bar">
         <div class="nav-content">
-            <img src="../static/img/baboon.png">
+            <div class="members">
+                <img src="../static/img/baboon.png">
+                <a href="/member/juan">Juan</a>
+                <a href="/member/noah">Noah</a>
+                <a href="/member/malik">Malik</a>
+            </div>
             <div class="nav-logo">
                 <a href="/">
                     <img src="../static/img/logo.svg" />
@@ -36,7 +42,7 @@
                 </div>
                 <div class="slide-menu">
                     <ul>
-                        <li><a href="#profile">Intro</a></li>
+                        <li><a href="#profile">Introduction</a></li>
                         <li><a href="#education">About & Education</a></li>
                         <li><a href="#projects">Experience</a></li>
                         <li><a href="#projects">Projects</a></li>
