--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -68,6 +68,7 @@ body {
 
 .nav-bar {
     width: 100%;
+    z-index: 4;
     display: block;
     position: fixed;
     top: 0;
@@ -120,7 +121,6 @@ body {
 .baboon {
     max-height: 150px;
     border-radius: 20px;
-    margin-top: 75px;
 }
 
 .person {
@@ -183,4 +183,36 @@ body {
 
 .person span:hover {
     color: cyan;
+}
+
+/* Map Styling */
+#map {
+    position: relative;
+    top: 0;
+    height: 80vh;
+    width: 80%;
+    margin: auto;
+    z-index: 1;
+}
+
+.map-container {
+    position: relative;
+}
+
+.map-label {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+    background-color: rgb(193, 193, 193);
+    width: 80%;
+    margin: 0;
+    padding: 10px 0;
+}
+
+.section {
+    box-sizing: border-box;
+    height: calc(100vh - 60px);
+    margin-top: 90px;
 }
