--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,6 +15,14 @@
         rel="stylesheet">
 
     <link lang='sass' rel="stylesheet" href="../static/styles/home.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+        integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+        crossorigin="" />
+    <script defer src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+        integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+        crossorigin=""></script>
+    <script defer src="../static/home.js"></script>
+
     <link rel='icon' href='../static/img/favicon.ico' type='image/x-icon' />
     <title>{{ title }}</title>
 </head>
@@ -29,32 +37,42 @@
             </div>
         </div>
     </header>
+    <div class="container">
+        <div class="section">
+            <img src="../static/img/baboon.png" class="baboon">
+            <div class="home-profile">
+                <div class="person">
+                    <h1>Juan</h1>
+                    <img src="../static/img/juanprofile.jpg" alt="juan">
+                    <br>
+                    <div class="button">
+                        <a href="/member/juan">Learn more!</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <h1>Malik</h1>
+                    <img src="../static/img/malikprofile.jpg" alt="malik">
+                    <br>
+                    <div class="button">
+                        <a href="/member/malik">Learn more!</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <h1>Noah</h1>
+                    <img src="../static/img/noahprofile.jpg" alt="noah">
+                    <br>
+                    <div class="button">
+                        <a href="/member/noah">Learn more!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <img src="../static/img/baboon.png" class="baboon">
-    <div class="home-profile">
-        <div class="person">
-            <h1>Juan</h1>
-            <img src="../static/img/juanprofile.jpg" alt="juan">
-            <br>
-            <div class="button">
-                <a href="/member/juan">Learn more!</a>
+        <div class="map-container section">
+
+            <div id="map">
             </div>
-        </div>
-        <div class="person">
-            <h1>Malik</h1>
-            <img src="../static/img/malikprofile.jpg" alt="malik">
-            <br>
-            <div class="button">
-                <a href="/member/malik">Learn more!</a>
-            </div>
-        </div>
-        <div class="person">
-            <h1>Noah</h1>
-            <img src="../static/img/noahprofile.jpg" alt="noah">
-            <br>
-            <div class="button">
-                <a href="/member/noah">Learn more!</a>
-            </div>
+            <h1 class="map-label">Where We've Been</h1>
         </div>
     </div>
 
