--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -131,16 +131,6 @@ Html
     </section>
 
 </body>
-<script>
-    let menuOpen = false;
-    const burgerButton = document.querySelector('.burger-button');
-    const menu = document.querySelector('.menu');
-
-    burgerButton.addEventListener('click', (e) => {
-        menu.classList.toggle('open');
-    })
-
-
-</script>
+<script src="../static/member.js"></script>
 
 </html>
