--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -109,19 +109,18 @@ body {
 
 .profile {
     background-color: #000000 !important;
-    /* changed background */
     text-align: center;
     height: 320px;
     margin-bottom: 50px;
 }
 
 .profile h1 {
-    font-size: 60px;  /* Increased font size b/c of new font */
+    font-size: 60px; 
     font-weight: 700;
     color: white;
 }
 
-.profile img {
+.profile img {  /* positioning more to the left */
     border-radius: 50%;
     max-width: 100%;
     max-height: 100%;
@@ -130,6 +129,7 @@ body {
     /* changed right margin */
     display: block;
     padding: 20px;
+    transform: translateX(-80px);
 }
 
 .profile .profile-picture {
@@ -342,7 +342,7 @@ About/Edu Section Styling
 .year {
     font-size: 14px;
     margin-left: 30px;
-    font-weight:lighter
+    font-weight:lighter;
 }
 
 .activites {
@@ -351,7 +351,7 @@ About/Edu Section Styling
     margin-right: 30px;
 }
 
-.about:hover, .edu:hover, .experiences:hover, .projects:hover{
+.about:hover, .edu:hover, .experiences:hover {
     transform: scale(1.05);
     transition: all 1s ease;
 }
@@ -391,7 +391,7 @@ Projects Section Styling
     color: white;
     background: none;
     border: 2px solid white;
-    height: 600px;
+    height: 750px;
     width: 1060px;
     margin: auto;
     border-radius: 10px;
@@ -401,6 +401,7 @@ Projects Section Styling
 .projects h2 {
     font-size: 50px;
     text-align: center;
+    margin-bottom: 0;
 }
 
 .project-list {
@@ -414,11 +415,49 @@ Projects Section Styling
     color: white;
     background: none;
     border: 2px solid white;
-    width: 200px;
+    width: 300px;
     margin: 100px;
     border-radius: 10px;
 }
 
-.first p, .second p {
+.projects h3 {
+    font-size: 30px;
     text-align: center;
+}
+
+.projects p {
+    font-size: 18px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.project-image {
+    height: 180px;
+    margin-bottom: 20px;
+    background-size: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.weather-image {
+    background-image: url('/static/img/project-images/weather-app.jpg');  /* Can't use .. because starting path search from css file */
+}
+
+.simonsays-image {
+    background-image: url('/static/img/project-images/simon-says.jpg');  /* Can't use .. because starting path search from css file */
+}
+
+.project-link {
+    background-color: rgb(99, 94, 94);
+    color: white;
+    padding: 10px 20px;
+    display: block;
+    text-align: center;
+    margin: 20px 50px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.first:hover, .second:hover {
+    transform: scale(1.4);
+    transition: all 1s ease;
 }
