--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -16,6 +16,12 @@ Html
         rel="stylesheet">
 
     <link lang='sass' rel="stylesheet" href="../static/styles/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+        integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+        crossorigin="" />
+    <script defer src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+        integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+        crossorigin=""></script>
     <link rel='icon' href='../static/img/favicon.ico' type='image/x-icon' />
     <title>{{ name }}</title>
 </head>
@@ -130,7 +136,15 @@ Html
         </div>
     </section>
 
+    <div class="map-container section">
+
+        <div id="map">
+        </div>
+        <h1 class="map-label">Where I've Been</h1>
+    </div>
+
 </body>
-<script src="../static/member.js"></script>
+
+<script defer src="../static/member.js"></script>
 
 </html>
