Added themed waves per member and new logo

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,6 @@
         rel="stylesheet">
 
     <link lang='sass' rel="stylesheet" href="../static/styles/home.css">
-    <script defer src="../static/home.js"></script>
 
     <link rel='icon' href='../static/img/favicon.ico' type='image/x-icon' />
     <title>{{ title }}</title>
@@ -33,7 +32,7 @@
     </header>
     <div class="container">
         <div class="section">
-            <img src="../static/img/baboon.png" class="baboon">
+            <img src="../static/img/boisterous_baboons.png" class="baboon">
             <div class="home-profile">
                 <div class="person">
                     <h1>Juan</h1>
