--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -4,6 +4,12 @@ html {
     box-sizing: border-box;
 }
 
+:root {
+    --juan: violet;
+    --malik: orange;
+    --noah: rgb(57, 175, 214);
+}
+
 p,
 h1,
 h2,
@@ -120,7 +126,7 @@ body {
 
 .baboon {
     max-height: 150px;
-    border-radius: 20px;
+    transform: scale(1.3, 1.3);
 }
 
 .person {
