--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -501,12 +501,13 @@ About/Edu Section Styling
 }
 
 .map-label {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     z-index: 3;
-    background-color: rgb(193, 193, 193);
+    background-color: rgb(0, 0, 0);
+    color: white;
     width: 80%;
     margin: 0;
     padding: 10px 0;
